# Autonomous-Obstacle-Classification

./: .gitignore  CMakeLists.txt  README.md
include/: DataCleaner.h  Lidar.h  Sensor.h
pybind_module/: bindings.cpp
src/: DataCleaner.cpp  Lidar.cpp  main.cpp
